# AI-workflow-automation

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  init_db.sql
backend/: .dockerignore  .env.example  Dockerfile  ai_service.py  database.py  dependencies.py  main.py  migration.py  migrations.py  models.py  prompts.py  pyproject.toml  schemas.py
backend/actions/routes/: action_router.py  webhook_router.py
backend/actions/services/: gmail_service.py
backend/ai/routes/: ai_router.py
backend/ai/schemas/: __init__.py  ai_response.py
backend/ai/services/: __init__.py  ai_service.py
backend/alembic/: env.py
backend/alembic/versions/: 3a0100fb10ef_added_processed_messages_table.py  433ce5d966d4_add_auth_codes_table.py  45c50d63932a_set_nullable_to_true_for_access_token.py  4aecc30d62be_remove_constraint_and_convert_status_to_.py  6f6078df7812_initial_migration_reset.py  870088582def_add_oauth_states_table.py  9116db711990_update_status_column_of_workflow_tables.py  a1b2c3d4e5f6_add_sync_pending_columns.py  a7d9c8b49d32_add_last_synced_started_at_column_to_.py  b7c91a2d3e4f_add_workflow_runs_table.py  c1d2e3f4a5b6_hash_refresh_tokens_clear_existing.py  c7182be5a11f_add_is_connected_column.py  cba185ee478d_alter_access_token_to_accept_null.py  cfdab8a922ec_first_migration.py  d2e3f4a5b6c7_encrypt_connected_account_tokens.py  e3f4a5b6c7d8_add_webhook_secret_to_workflows.py  (+5 more)
backend/auth/: depedencies.py  dependencies.py  utils.py
backend/auth/models/: __init__.py  (+4 more)
backend/core/: config.py  config_loader.py  cookies.py  crypto.py  database.py  event_listener.py  events.py  models.py  rate_limit.py  setup_logging.py  websocket_manager.py
backend/routes/: auth.py
backend/scripts/: register_renewal.py
backend/tests/: conftest.py  test_label_logic.py  test_master_flow.py  test_websocket.py
backend/utils/: build_adjacency_list.py  catalog_introspector.py  evaluate_condition.py  gmail_colors.py  resolve_variables.py  security.py  translate_workflow_runs_schema.py
backend/workflow_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+161 files in other folders)
