[project]
name = "workflow-automation"
version = "0.1.0"
description = "A FastAPI project for workflow automation."
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "SQLAlchemy",
  "psycopg2-binary",
  "pydantic[email]",
  "azure-ai-inference",
  "httpx",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "google-auth-httplib2",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
