[project]
requires-python = ">=3.13"
name = "workflow-automation"
version = "0.1.0"
description = "AI workflow automation"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "SQLAlchemy",
  "psycopg2-binary",
  "pydantic[email]",
  "azure-ai-inference",
  "httpx",
  "google-api-python-client",
  "google-auth",
  "google-auth-oauthlib",
  "google-auth-httplib2",
  "PyJWT",
  "passlib[bcrypt]",
  "pydantic-settings>=2.11.0",
  "prefect",
  "alembic>=1.17.2",
  "pytest>=9.0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "ruff>=0.13.2",
]

[tool.setuptools]
packages = ["ai", "auth", "core", "user", "workflow"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
